kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  labels:
    app.kubernetes.io/name: website
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: website
    spec:
      containers:
        - name: gemeente-website
          image: ghcr.io/bartjkdp/gemeente-website:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4321
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
