kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
  labels:
    app.kubernetes.io/name: website
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - website.fieldlab.platform-dienstverlening.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: website
          port: 80
